# testtool-demos

./: README.md  pyproject.toml
.testsolar/: testcontainer.yaml
pytest/: README.md  task_template.yaml
pytest/.testsolar/: testcontainer.yaml
pytest/tests/: test_assert.py
tests/: test_data_drive_zh_cn.py  test_normal_case.py
