[project]
name = "testtool-pytest-demo"
version = "0.1.0"
description = "testsolar pytest demo"
authors = [
    {name = "asiazhang", email = "asiazhang2002@gmail.com"},
]
dependencies = [
    "pytest>=8.1.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache License"}


[tool.pdm]
distribution = false
